--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Main body */
 * {
     box-sizing: border-box;
 }
@@ -21,9 +22,21 @@ main {
     padding: 1rem;
 }
 
+/* Navigation */
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+/* Toggle celcius to farenheit button*/
+.toggleDeg {
+    width: 5rem;
+}
+
+/* Search bar */
 #search-container {
-    width: 50%;
-    margin: auto;
+    width: 40%;
     display: flex;
     gap: 5px;
     justify-content: center;
@@ -37,6 +50,7 @@ main {
     border-radius: 5px;
 }
 
+/* Search button */
 #search {
     border: 1px solid #5a81af;
     border-radius: 5px;
@@ -45,6 +59,15 @@ main {
     padding-left: 20px;
     padding-right: 20px;
 }
+
+/* Option list */
+#results-container {
+    margin: auto;
+    width: 50%;
+}
+
+
+/* Card Styles */
 
 #card {
     border: 1px solid rgb(197, 197, 197);
@@ -64,6 +87,7 @@ main {
     align-items: center;
 }
 
+/* Icon styles */
 .sunny-icon {
     display: inline-block;
     width: 55px;
@@ -73,8 +97,15 @@ main {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23d0cc00' d='M11 5V1h2v4zm6.65 2.75l-1.375-1.375l2.8-2.875l1.4 1.425zM19 13v-2h4v2zm-8 10v-4h2v4zM6.35 7.7L3.5 4.925l1.425-1.4L7.75 6.35zm12.7 12.8l-2.775-2.875l1.35-1.35l2.85 2.75zM1 13v-2h4v2zm3.925 7.5l-1.4-1.425l2.8-2.8l.725.675l.725.7zM12 18q-2.5 0-4.25-1.75T6 12t1.75-4.25T12 6t4.25 1.75T18 12t-1.75 4.25T12 18'/%3E%3C/svg%3E");
 }
 
+
+/* Weather results styles */
 .content-container {
     width: 70%;
+}
+
+.state {
+    font-size: 40px;
+    font-weight: bold;
 }
 
 .location {
